--- a/ui/kamehamedraw/src/components/pages/style.css
+++ b/ui/kamehamedraw/src/components/pages/style.css
@@ -1,32 +1,45 @@
 /* style.css */
 
 .home {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: dark
+}
+
+.homeContainer {
+    width: 400px;
+    margin: 0 auto 0 auto;
+    padding: 32px;
+    background: rgb(98, 6, 98);
+    border-radius: 6px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 28px;
   }
   
-  .header {
-    font-size: 24px;
-    margin-bottom: 20px;
+  .input-container {
+    width: 100%;
+    padding: 12px;
+    border-radius: 6px;
+    border: 1px solid rgb(63, 73, 204);
+    font-size: 0.9rem;
   }
   
-  .button-container {
-    display: flex;
-    gap: 20px; 
-  }
-  
-  .createButton, .joinButton {
+  .btn-secondary {
     padding: 10px 20px;
     font-size: 16px;
     border: none;
     border-radius: 5px;
-    background-color: #007bff; 
+    background-color: darkorchid; 
     color: white;
     cursor: pointer;
   }
   
-  .createButton:hover, .joinButton:hover {
-    background-color: #0056b3; 
+  .btn-secondary:hover{
+    background-color: teal; 
   }
   
