--- a/ui/kamehamedraw/src/components/container/style.css
+++ b/ui/kamehamedraw/src/components/container/style.css
@@ -16,3 +16,21 @@
     margin-top: 1%;
     background: white;
 }
+
+.popup {
+    position: absolute;
+    z-index: 1;
+    top: 5%;
+    left: 5%;
+    background-color: #b02828;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    animation: fadeOut 16s forwards; /* Apply the fade-out animation */
+}
+
+
+@keyframes fadeOut {
+    0% { opacity: 1; }
+    100% { opacity: 0; }
+}
