--- a/ui/kamehamedraw/src/components/container/style.css
+++ b/ui/kamehamedraw/src/components/container/style.css
@@ -1,16 +1,26 @@
-.container{
+.container {
     position: fixed;
     width: 100%;
     height: 100%;
     background: black;
+    display: flex;
+    flex-direction: column;
 }
 
-.color-picker-container{
+.top-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+}
+
+.color-picker-container {
     text-align: center;
+    flex-grow: 1;
 }
 
-.board-container{
-    width: 90%;
+.board-container {
+    width: 100%;
     height: 90%;
     margin: auto;
     margin-top: 1%;
@@ -27,6 +37,25 @@
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     animation: fadeOut 16s forwards; /* Apply the fade-out animation */
+}
+
+.btn-leave {
+    font-size: 14px;
+    padding: 10px 20px;
+    background-color: #e63946;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.btn-leave:hover {
+    background-color: #f57f79;
+}
+
+.btn-leave:focus {
+    outline: none;
 }
 
 
